# MCPAgentRE

./: .gitignore  PR_test.txt  README.md  TAPD平台MCP服务器开发指南.md  check_mcp_tools.py  context_optimizer.py  demo_kb_simple.py  demo_knowledge_base.py  docx_summary.json  fake_tapd.json  fake_tapd_gen.py  main.py  msg_from_fetcher.json  package-lock.json  pr测试  pyproject.toml  quick_demo.py  requirements.txt  tapd_data_fetcher.py  tapd_mcp_server.py  提示词 - TAPD 平台 MCP 分析助手.md  提示词-TAPD平台MCP分析助手.md  测试模式.md
PRESENTATION/: Mini 项目汇报 PPT 大纲.md
config/: .gitkeep
docs/: README.md  scoring_system_usage.md
docx_sum/: 1.docx  2.docx
examples/: scoring_system_example.py
excel_data/: 2_table_1.csv
knowledge_documents/: .gitkeep  AI测试用例评估器操作手册.md  API兼容性增强功能使用手册.md  DeepSeek API 环境变量配置指南.md  HowToBuildMCPServer.md  TAPD API信息.md  TAPD API文档 - API配置指引.md  TAPD API文档 - 获取需求.md  TAPD数据向量化功能使用手册.md  TAPD数据精确搜索功能使用手册.md  TAPD数据预处理工具使用手册.md  TAPD时间趋势分析工具使用手册.md  TAPD智能报告数据时间筛选功能使用手册.md  TAPD词频分析工具使用手册.md  get_tapd_data工具使用手册.md  历史需求知识库使用指南.md  测试用例规则自定义功能使用手册.md
local_data/: .gitkeep
mcp_tools/: __init__.py  common_utils.py  context_optimizer.py  data_precise_searcher.py  data_preprocessor.py  data_vectorizer.py  data_vectorizer.py.backup  docx_summarizer.py  enhanced_scoring_config.py  enhanced_testcase_scorer.py  example_tool.py  fake_tapd_gen.py  knowledge_base.py  requirement_knowledge_base.py  scoring_config_manager.py  simple_vectorizer.py  test_case_evaluator.py  test_case_require_list_knowledge_base.py  test_case_rules_customer.py  testcase_quality_scorer.py  (+3 more)
(+43 files in other folders)
