[project]
name = "mcpagentre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.8",
    "faiss-cpu>=1.11.0",
    "mcp[cli]>=1.9.2",
    "numpy>=2.2.6",
    "requests>=2.32.3",
    "sentence-transformers>=5.0.0",
]
