[project]
name = "mcpagentre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.8",
    "python-docx>=1.1.2",
    "faiss-cpu>=1.11.0",
    "faker>=37.4.0",
    "mcp[cli]>=1.9.2",
    "numpy>=2.2.6",
    "requests>=2.32.3",
    "sentence-transformers>=5.0.0",
    "tiktoken>=0.9.0",
    "jieba>=0.42.1",
    "beautifulsoup4>=4.13.4",
    "pandas>=2.3.1",
    "openpyxl>=3.1.5",
    "openai>=1.101.0",
    "matplotlib>=3.10.5",
    "hf-xet>=1.1.5",
]
